--- a/src/app/course/mcom/mcom.component.html
+++ b/src/app/course/mcom/mcom.component.html
@@ -47,7 +47,7 @@
                                                                                 <i class="fa fa-arrow-right"></i>
                                                                                 <span class="label">Detail B.Ed (2 Years) Syllabus III & IV Semester</span>
                                                                                 <span class="value">
-                                                                                    <a href="http://www.cesociety.in/ijbed/images/Syllabus/Detail%20B.Ed%20(2%20Years)%20Syllabus%20III%20&%20IV%20Semester.pdf"
+                                                                                    <a href="https://www.cesociety.in/ijbed/images/Syllabus/Detail%20B.Ed%20(2%20Years)%20Syllabus%20III%20&%20IV%20Semester.pdf"
                                                                                         target="_blank"><i
                                                                                             class="fa fa-file-pdf-o"
                                                                                             aria-hidden="true"></i>
@@ -57,7 +57,7 @@
                                                                                 <i class="fa fa-arrow-right"></i>
                                                                                 <span class="label">Detail B.Ed (2 Years) Syllabus I & II Semester</span>
                                                                                 <span class="value">
-                                                                                    <a href="http://www.cesociety.in/ijbed/images/Syllabus/Detail%20B.Ed%20(2%20Years)%20Syllabus%20I%20&%20II%20Semester.pdf"
+                                                                                    <a href="https://www.cesociety.in/ijbed/images/Syllabus/Detail%20B.Ed%20(2%20Years)%20Syllabus%20I%20&%20II%20Semester.pdf"
                                                                                         target="_blank"><i
                                                                                             class="fa fa-file-pdf-o"
                                                                                             aria-hidden="true"></i>
