--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -147,19 +147,19 @@
                         </li>
 
                         <li class="menu-item lm">
-                            <a href="http://www.cesociety.in/#/celebration " target="_blank">Centenary Celebration</a>
+                            <a href="https://www.cesociety.in/#/celebration " target="_blank">Centenary Celebration</a>
                         </li>
                         |
                         <li class="menu-item lm">
                             <a routerLink="/more/news" routerLinkActive="active" target="_blank">News</a>
                         </li>
                         |
-                        <li class="menu-item lm">
+                        <!-- <li class="menu-item lm">
                             <a (click)="open(content)" target="_blank">Birthday</a>
                         </li>
-                        |
+                        | -->
                         <li class="menu-item lm">
-                            <a href="http://www.cesociety.in/#/counselling" target="_blank">Free counseling</a>
+                            <a href="https://www.cesociety.in/#/counselling" target="_blank">Free Psychological Counseling</a>
                         </li>
                     </ul>
 
@@ -259,7 +259,7 @@
                                         <li class="menu-item">
                                             <a routerLink="/home" routerLinkActive="active">Home</a>
                                             <ul class="sub-menu">
-                                                <li><a href="http://www.cesociety.in/#/home/main" target="_blank">CES
+                                                <li><a href="https://www.cesociety.in/#/home/main" target="_blank">CES
                                                         Home</a>
                                                 </li>
                                             </ul>
@@ -359,7 +359,7 @@
                                             <li class="menu-item-has-children">
                                                 <a routerLink="/home" routerLinkActive="active">Home</a>
                                                 <ul class="sub-menu">
-                                                    <li><a href="http://www.cesociety.in/#/home/main"
+                                                    <li><a href="https://www.cesociety.in/#/home/main"
                                                             target="_blank">CES Home</a>
                                                     </li>
                                                 </ul>
