--- a/src/app/department/staff-details/staff-details.component.css
+++ b/src/app/department/staff-details/staff-details.component.css
@@ -1,4 +1,13 @@
-.rs-team.style1 .team-item .content-part .social-links li {
-    display: block;
-    margin-right: 5px;
+.rs-team.style1 .team-item .content-part {
+    top: 51% !important;
+}
+
+.textCustom {
+    color: white !important;
+}
+
+.rs-team.style1 .team-item .content-part .name {
+    margin-bottom: 2px;
+    font-size: 17px;
+
 }
